<resources>
    <string name="app_name">HashApp</string>
    <string name="fetch_url_hash">Fetch URL hash</string>
    <string name="enter_website_url">Enter website URL</string>
    <string name="loading">Please wait...</string>
    <string name="ok">Ok</string>
    <string name="database_error">Error happened during database operation.</string>
    <string name="download_failed">Web page content download failed.</string>
    <string name="url">URL:</string>
    <string name="hash">HASH:</string>
    <string name="persistence">Persistence:</string>
    <string name="database">Database</string>
    <string name="preferences">Shared preferences</string>
</resources>
