<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hash.domagojkopic.hashapp.MainActivity">

    <EditText
        android:id="@+id/et_url"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_website_url"/>

    <Button
        android:id="@+id/btn_fetch"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/fetch_url_hash"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/et_url"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btn_fetch"
        android:layout_marginTop="50dp"
        android:visibility="invisible">

        <TextView
            android:id="@+id/tv_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/url"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" />

        <TextView
            android:id="@+id/tv_url_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="http://"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_alignBaseline="@+id/tv_url"
            android:layout_alignBottom="@+id/tv_url"
            android:layout_toRightOf="@+id/tv_url"
            android:layout_toEndOf="@+id/tv_url" />

        <TextView
            android:id="@+id/tv_hash"
            android:text="@string/hash"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_url_content"
            android:layout_marginTop="30dp"
            android:layout_alignLeft="@+id/tv_url"/>

        <TextView
            android:id="@+id/tv_hash_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_hash"
            android:layout_alignBottom="@+id/tv_hash"
            android:layout_toRightOf="@+id/tv_hash"
            android:layout_toEndOf="@+id/tv_hash"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/tv_persistence"
            android:text="@string/persistence"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_hash"
            android:layout_below="@+id/tv_hash_content"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/tv_persistence_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_alignBaseline="@+id/tv_persistence"
            android:layout_alignBottom="@+id/tv_persistence"
            android:layout_toRightOf="@+id/tv_persistence"
            android:layout_toEndOf="@+id/tv_persistence"/>
    </RelativeLayout>


</RelativeLayout>
